# esp32-http-api

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  net.rs  web.rs
