[package]
name = "esp32-http-api"
version = "0.1.0"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.1", default-features=false, features = [ "rt", "vectored", "embassy-integrated-timers", "esp32c3", "async", "embassy","rt", "embassy-time-timg0","embassy-executor-thread" ] }

esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.4.0", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi-default",
    "embassy-net",
    "async"
] }

heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

embassy-sync = "0.5.0"
embassy-net = { version = "0.4.0", features = ["dhcpv4", "dns", "medium-ip", "medium-ethernet", "tcp", "udp"] }
embassy-executor = { version = "0.5", features = ["nightly", "integrated-timers","executor-thread"] }

embassy-time = "0.3.0"
static_cell = { version = "2.0.0", features = ["nightly"] }
embedded-nal-async = "0.7.1"
thiserror-no-std = "2.0.2"
rand_core = "0.6.4"
picoserve = {version="0.10.0", features = ["embassy"]}

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", features = ["alloc"], default-features = false }


[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
